--- a/DLPrototype/DLPrototype.entitlements
+++ b/DLPrototype/DLPrototype.entitlements
@@ -16,5 +16,7 @@
 	<false/>
 	<key>com.apple.security.files.user-selected.read-only</key>
 	<true/>
+	<key>com.apple.security.personal-information.calendars</key>
+	<true/>
 </dict>
 </plist>
