initial work on integrating calendars. it does work but will need to create a db resource to manage this data so we can show/hide info in different places

--- a/DLPrototype/Info.plist
+++ b/DLPrototype/Info.plist
@@ -14,6 +14,8 @@
 	<string>6.0</string>
 	<key>CFBundleName</key>
 	<string>$(PRODUCT_NAME)</string>
+	<key>CFBundleDisplayName</key>
+	<string>$(PRODUCT_NAME)</string>
 	<key>CFBundlePackageType</key>
 	<string>$(PRODUCT_BUNDLE_PACKAGE_TYPE)</string>
 	<key>CFBundleShortVersionString</key>
@@ -34,5 +36,9 @@
 	<true/>
 	<key>NSSupportsSuddenTermination</key>
 	<true/>
+	<key>NSCalendarsUsageDescription</key>
+	<string>Associate information with specific meetings</string>
+	<key>NSRemindersUsageDescription</key>
+	<string>Find related information in reminders</string>
 </dict>
 </plist>
