--- a/DLPrototype/DLPrototype.entitlements
+++ b/DLPrototype/DLPrototype.entitlements
@@ -12,6 +12,8 @@
 	<array>
 		<string>CloudKit</string>
 	</array>
+	<key>com.apple.developer.usernotifications.communication</key>
+	<true/>
 	<key>com.apple.security.app-sandbox</key>
 	<false/>
 	<key>com.apple.security.files.user-selected.read-only</key>
