app will check URLs to see if they're up so we need to support outgoing connections

--- a/KlockWork/DLPrototype.entitlements
+++ b/KlockWork/DLPrototype.entitlements
@@ -12,6 +12,8 @@
 	</array>
 	<key>com.apple.security.app-sandbox</key>
 	<true/>
+	<key>com.apple.security.network.client</key>
+	<true/>
 	<key>com.apple.security.personal-information.calendars</key>
 	<true/>
 </dict>
