--- a/KlockWork/DLPrototype.entitlements
+++ b/KlockWork/DLPrototype.entitlements
@@ -14,7 +14,7 @@
 	<true/>
 	<key>com.apple.security.assets.pictures.read-only</key>
 	<true/>
-	<key>com.apple.security.files.user-selected.read-only</key>
+	<key>com.apple.security.files.user-selected.read-write</key>
 	<true/>
 	<key>com.apple.security.network.client</key>
 	<true/>
